--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.8.13
+FROM python:3.8-slim-buster
 
 WORKDIR /app
 
+RUN python3 -m pip install --upgrade pip
+
 COPY . .
 
-RUN python3 -m pip install --upgrade pip
 RUN pip install -r dev-requirements.txt
 
-CMD ["python3", "main.py"]  
+CMD ["python3",  "main.py"]
